--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -7,9 +7,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: stellarium\n"
-"Report-Msgid-Bugs-To: stellarium@free.fr\n"
+"Report-Msgid-Bugs-To:\n"
 "POT-Creation-Date: 2006-06-20 20:50+0200\n"
-"PO-Revision-Date: 2006-05-17 18:49+0000\n"
+"PO-Revision-Date: 2006-06-21 14:27+0000\n"
 "Last-Translator: Bruce Cowan <bruce.cowan@dsl.pipex.com>\n"
 "Language-Team: English (United Kingdom) <en_GB@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -312,6 +312,13 @@ msgid ""
 "CTRL + Q : Quit\n"
 "CMD + Q  : Quit\n"
 msgstr ""
+"Misc:\n"
+"9 : Change meteor shower rate\n"
+"CTRL + 0...9 : execute GOTO command for telescope 0...9\n"
+"CTRL + SHIFT + H : toggle horizontal image flipping\n"
+"CTRL + SHIFT + V : toggle vertical image flipping\n"
+"CTRL + Q : Quit\n"
+"CMD + Q : Quit\n"
 
 #: src/stel_ui.cpp:740
 msgid "Help"
@@ -502,7 +509,7 @@ msgstr "Choose landscape:"
 
 #: src/stel_ui_conf.cpp:433 src/stel_ui_conf.cpp:888
 msgid "Author: "
-msgstr ""
+msgstr "Author: "
 
 #: src/stel_ui_conf.cpp:456
 msgid "Program Language: "
@@ -558,7 +565,7 @@ msgstr "Enter observatory name"
 
 #: src/stel_ui_conf.cpp:889
 msgid "Info: "
-msgstr ""
+msgstr "Info: "
 
 #: src/stel_ui_conf.cpp:941
 msgid ": Normal rate"
@@ -653,14 +660,12 @@ msgid "Sky Time At Start-up: "
 msgstr "Sky Time At Start-up: "
 
 #: src/stel_ui_tuiconf.cpp:368
-#, fuzzy
 msgid "Actual Time"
-msgstr "Set Time "
+msgstr "Actual Time"
 
 #: src/stel_ui_tuiconf.cpp:369
-#, fuzzy
 msgid "Preset Time"
-msgstr "Preset Sky Time: "
+msgstr "Preset Time"
 
 #: src/stel_ui_tuiconf.cpp:370
 msgid "Time Display Format: "
@@ -695,53 +700,44 @@ msgid "Twinkling: "
 msgstr "Twinkling: "
 
 #: src/stel_ui_tuiconf.cpp:389
-#, fuzzy
 msgid "Constellation Lines"
 msgstr "Constellation Lines"
 
 #: src/stel_ui_tuiconf.cpp:390
-#, fuzzy
 msgid "Constellation Names"
 msgstr "Constellation Names"
 
 #: src/stel_ui_tuiconf.cpp:391
-#, fuzzy
 msgid "Constellation Art Intensity"
-msgstr "Constellation Art [R]"
+msgstr "Constallation Art Intensity"
 
 #: src/stel_ui_tuiconf.cpp:392
-#, fuzzy
 msgid "Constellation Boundaries"
-msgstr "Constellation Boundaries"
+msgstr "Contellation Boundaries"
 
 #: src/stel_ui_tuiconf.cpp:394
-#, fuzzy
 msgid "Planet Names"
-msgstr "Planets"
+msgstr "Planet Names"
 
 #: src/stel_ui_tuiconf.cpp:395
-#, fuzzy
 msgid "Planet Orbits"
-msgstr "Planet Hints"
+msgstr "Planet Orbits"
 
 #: src/stel_ui_tuiconf.cpp:396
-#, fuzzy
 msgid "Planet Trails"
-msgstr "Planets"
+msgstr "Planet Trails"
 
 #: src/stel_ui_tuiconf.cpp:397
 msgid "Meridian Line"
-msgstr ""
+msgstr "Meridian Line"
 
 #: src/stel_ui_tuiconf.cpp:402
-#, fuzzy
 msgid "Nebula Names"
-msgstr "Nebulae [N]"
+msgstr "Nebula Names"
 
 #: src/stel_ui_tuiconf.cpp:403
-#, fuzzy
 msgid "Nebula Circles"
-msgstr "Nebula"
+msgstr "Nebula Circles"
 
 #: src/stel_ui_tuiconf.cpp:407
 msgid "Landscape: "
@@ -800,13 +796,12 @@ msgid "Update me via Internet: "
 msgstr "Update me via Internet: "
 
 #: src/stel_ui_tuiconf.cpp:427
-#, fuzzy
 msgid "Set UI Locale: "
-msgstr "Set Location "
+msgstr "Set UI Locale: "
 
 #: src/stel_ui_tuiconf.cpp:539
 msgid "Arrow down to load list."
-msgstr ""
+msgstr "Arrow down to load list."
 
 #: src/translations.h:33
 msgid "Sun"
@@ -938,20 +933,19 @@ msgstr "W"
 
 #: src/translations.h:69
 msgid "Chinese"
-msgstr ""
+msgstr "Chinese"
 
 #: src/translations.h:70
 msgid "Western"
-msgstr ""
+msgstr "Western"
 
 #: src/translations.h:71
-#, fuzzy
 msgid "Polynesian"
-msgstr "Planet Hints"
+msgstr "Polynesian"
 
 #: src/translations.h:72
 msgid "Egyptian"
-msgstr ""
+msgstr "Egyptian"
 
 #: src/translations.h:75
 msgid "Aquila"
@@ -1455,367 +1449,367 @@ msgstr "Drum"
 
 #: src/translations.h:205
 msgid "Three Steps"
-msgstr ""
+msgstr "Three Steps"
 
 #: src/translations.h:206
 msgid "Imperial Guards"
-msgstr ""
+msgstr "Imperial Guards"
 
 #: src/translations.h:207
 msgid "Horn"
-msgstr ""
+msgstr "Horn"
 
 #: src/translations.h:208
 msgid "Willow"
-msgstr ""
+msgstr "Willow"
 
 #: src/translations.h:209
 msgid "Imperial Passageway"
-msgstr ""
+msgstr "Imperial Passageway"
 
 #: src/translations.h:210
 msgid "Kitchen"
-msgstr ""
+msgstr "Kitchen"
 
 #: src/translations.h:211
 msgid "River Turtle"
-msgstr ""
+msgstr "River Turtle"
 
 #: src/translations.h:212
 msgid "Stomach"
-msgstr ""
+msgstr "Stomach"
 
 #: src/translations.h:213
 msgid "Great General"
-msgstr ""
+msgstr "Great General"
 
 #: src/translations.h:214
 msgid "Wall"
-msgstr ""
+msgstr "Wall"
 
 #: src/translations.h:215
 msgid "Legs"
-msgstr ""
+msgstr "Legs"
 
 #: src/translations.h:216
 msgid "Root"
-msgstr ""
+msgstr "Root"
 
 #: src/translations.h:217
 msgid "Ramparts"
-msgstr ""
+msgstr "Ramparts"
 
 #: src/translations.h:218
 msgid "Flying Corridor"
-msgstr ""
+msgstr "Flying Corridor"
 
 #: src/translations.h:219
 msgid "Outer Fence"
-msgstr ""
+msgstr "Outer Fence"
 
 #: src/translations.h:220
 msgid "Ford"
-msgstr ""
+msgstr "Ford"
 
 #: src/translations.h:221
 msgid "Seven Excellencies"
-msgstr ""
+msgstr "Seven Excellencies"
 
 #: src/translations.h:222
 msgid "Market"
-msgstr ""
+msgstr "Market"
 
 #: src/translations.h:223
 msgid "Five Chariots"
-msgstr ""
+msgstr "Five Chariots"
 
 #: src/translations.h:224
 msgid "Rolled Tongue"
-msgstr ""
+msgstr "Rolled Tongue"
 
 #: src/translations.h:226
 msgid "Toilet"
-msgstr ""
+msgstr "Toilet"
 
 #: src/translations.h:227
 msgid "Screen"
-msgstr ""
+msgstr "Screen"
 
 #: src/translations.h:228
 msgid "Soldiers Market"
-msgstr ""
+msgstr "Soldier's Market"
 
 #: src/translations.h:229
 msgid "Square Granary"
-msgstr ""
+msgstr "Square Granary"
 
 #: src/translations.h:230
 msgid "Three Stars"
-msgstr ""
+msgstr "Three Stars"
 
 #: src/translations.h:231
 msgid "Four Channels"
-msgstr ""
+msgstr "Four Channels"
 
 #: src/translations.h:232
 msgid "Well"
-msgstr ""
+msgstr "Well"
 
 #: src/translations.h:233
 msgid "South River"
-msgstr ""
+msgstr "South River"
 
 #: src/translations.h:234
 msgid "North River"
-msgstr ""
+msgstr "North River"
 
 #: src/translations.h:235
 msgid "Five Feudal Kings"
-msgstr ""
+msgstr "Five Feudal Kings"
 
 #: src/translations.h:236
 msgid "Orchard"
-msgstr ""
+msgstr "Orchard"
 
 #: src/translations.h:237
 msgid "Meadows"
-msgstr ""
+msgstr "Meadows"
 
 #: src/translations.h:238
 msgid "Circular Granary"
-msgstr ""
+msgstr "Circular Granary"
 
 #: src/translations.h:239
 msgid "Purple Palace"
-msgstr ""
+msgstr "Purple Palace"
 
 #: src/translations.h:240
 msgid "Extended Net"
-msgstr ""
+msgstr "Extended Net"
 
 #: src/translations.h:241
 msgid "Arsenal"
-msgstr ""
+msgstr "Arsenal"
 
 #: src/translations.h:242
 msgid "Hook"
-msgstr ""
+msgstr "Hook"
 
 #: src/translations.h:243
 msgid "Supreme Palace"
-msgstr ""
+msgstr "Supreme Palace"
 
 #: src/translations.h:244
 msgid "Jade Well"
-msgstr ""
+msgstr "Jade Well"
 
 #: src/translations.h:245
 msgid "Lance"
-msgstr ""
+msgstr "Lance"
 
 #: src/translations.h:247
 msgid "Mausoleum"
-msgstr ""
+msgstr "Mausoleum"
 
 #: src/translations.h:248
 msgid "Dog"
-msgstr ""
+msgstr "Dog"
 
 #: src/translations.h:249
 msgid "Earth God's Temple"
-msgstr ""
+msgstr "Earth God's Temple"
 
 #: src/translations.h:250
 msgid "Bow and Arrow"
-msgstr ""
+msgstr "Bow and Arrow"
 
 #: src/translations.h:251
 msgid "Pestle"
-msgstr ""
+msgstr "Pestle"
 
 #: src/translations.h:252
 msgid "Mortar"
-msgstr ""
+msgstr "Mortar"
 
 #: src/translations.h:253
 msgid "Rooftop"
-msgstr ""
+msgstr "Rooftop"
 
 #: src/translations.h:254
 msgid "Thunderbolt"
-msgstr ""
+msgstr "Thunderbolt"
 
 #: src/translations.h:255
 msgid "Chariot Yard"
-msgstr ""
+msgstr "Chariot Yard"
 
 #: src/translations.h:256
 msgid "Good Gourd"
-msgstr ""
+msgstr "Good Gourd"
 
 #: src/translations.h:257
 msgid "Rotten Gourd"
-msgstr ""
+msgstr "Rotten Gourd"
 
 #: src/translations.h:258
 msgid "Encampment"
-msgstr ""
+msgstr "Encampment"
 
 #: src/translations.h:259
 msgid "Thunder and Lightning"
-msgstr ""
+msgstr "Thunder and Lightning"
 
 #: src/translations.h:260
 msgid "Palace Gate"
-msgstr ""
+msgstr "Palace Gate"
 
 #: src/translations.h:261
 msgid "Emptiness"
-msgstr ""
+msgstr "Emptiness"
 
 #: src/translations.h:262
 msgid "Weaving Girl"
-msgstr ""
+msgstr "Weaving Girl"
 
 #: src/translations.h:263
 msgid "Girl"
-msgstr ""
+msgstr "Girl"
 
 #: src/translations.h:264
 msgid "Ox"
-msgstr ""
+msgstr "Ox"
 
 #: src/translations.h:265
 msgid "Heart"
-msgstr ""
+msgstr "Heart"
 
 #: src/translations.h:266
 msgid "Room"
-msgstr ""
+msgstr "Room"
 
 #: src/translations.h:267
 msgid "Spring"
-msgstr ""
+msgstr "Spring"
 
 #: src/translations.h:268
 msgid "Establishment"
-msgstr ""
+msgstr "Establishment"
 
 #: src/translations.h:269
 msgid "Flail"
-msgstr ""
+msgstr "Flail"
 
 #: src/translations.h:270
 msgid "Spear"
-msgstr ""
+msgstr "Spear"
 
 #: src/translations.h:271
 msgid "Right Flag"
-msgstr ""
+msgstr "Right Flag"
 
 #: src/translations.h:272
 msgid "Left Flag"
-msgstr ""
+msgstr "Left Flag"
 
 #: src/translations.h:273
 msgid "Drumstick"
-msgstr ""
+msgstr "Drumstick"
 
 #: src/translations.h:274
 msgid "Bond"
-msgstr ""
+msgstr "Bond"
 
 #: src/translations.h:275
 msgid "Woman's Bed"
-msgstr ""
+msgstr "Woman's Bed"
 
 #: src/translations.h:276
 msgid "Western Door"
-msgstr ""
+msgstr "Western Door"
 
 #: src/translations.h:277
 msgid "Eastern Door"
-msgstr ""
+msgstr "Eastern Door"
 
 #: src/translations.h:278
 msgid "Farmland"
-msgstr ""
+msgstr "Farmland"
 
 #: src/translations.h:279
 msgid "Star"
-msgstr ""
+msgstr "Star"
 
 #: src/translations.h:280
 msgid "Ghosts"
-msgstr ""
+msgstr "Ghosts"
 
 #: src/translations.h:281
 msgid "Xuanyuan"
-msgstr ""
+msgstr "Xuanyuan"
 
 #: src/translations.h:282
 msgid "Tripod"
-msgstr ""
+msgstr "Tripod"
 
 #: src/translations.h:283
 msgid "Neck"
-msgstr ""
+msgstr "Neck"
 
 #: src/translations.h:284
 msgid "Zaofu"
-msgstr ""
+msgstr "Zaofu"
 
 #: src/translations.h:285
 msgid "Market Officer"
-msgstr ""
+msgstr "Market Officer"
 
 #: src/translations.h:286
 msgid "Banner of Three Stars"
-msgstr ""
+msgstr "Banner of Three Stars"
 
 #: src/translations.h:289
 msgid "Bailer"
-msgstr ""
+msgstr "Bailer"
 
 #: src/translations.h:290
 msgid "Cat's Cradle"
-msgstr ""
+msgstr "Cat's Cradle"
 
 #: src/translations.h:291
 msgid "Voice of Joy"
-msgstr ""
+msgstr "Voice of Joy"
 
 #: src/translations.h:292
 msgid "The Seven"
-msgstr ""
+msgstr "The Seven"
 
 #: src/translations.h:293
 msgid "Maui's Fishhook"
-msgstr ""
+msgstr "Maui's Fishhook"
 
 #: src/translations.h:294
 msgid "Navigator's Triangle"
-msgstr ""
+msgstr "Navigator's Triangle"
 
 #: src/translations.h:295
 msgid "Kite of Kawelo"
-msgstr ""
+msgstr "Kite of Kawelo"
 
 #: src/translations.h:296
 msgid "Frigate Bird"
-msgstr ""
+msgstr "Frigate Bird"
 
 #: src/translations.h:297
 msgid "Cared for by Moon"
-msgstr ""
+msgstr "Cared for by the Moon"
 
 #: src/translations.h:298
 msgid "Dolphin"
-msgstr ""
+msgstr "Dolphin"
 
 #: src/translations.h:301
 msgid "Select and exit to run."
-msgstr ""
+msgstr "Select and exit to run."
 
 #: src/s_gui.cpp:2208 src/s_gui.cpp:2254
 msgid "Cancel"
@@ -1849,25 +1843,15 @@ msgstr "Minutes"
 msgid "Seconds"
 msgstr "Seconds"
 
-#~ msgid ""
-#~ "Misc:\n"
-#~ "9   : Toggle meteor shower rates\n"
-#~ msgstr ""
-#~ "Misc:\n"
-#~ "9 : Toggle meteor shower rates\n"
-
-#~ msgid "CTRL + Q : Quit\n"
-#~ msgstr "CTRL + Q : Quit↵\n"
-
-#~ msgid "CMD + Q  : Quit\n"
-#~ msgstr "CMD + Q : Quit↵\n"
-
+#, c-format
 #~ msgid "Loading HIP/SAO catalogs: %d/%d"
 #~ msgstr "Loading HIP/SAO catalogues: %d/%d"
 
+#, c-format
 #~ msgid "Loading HIP catalog: %d/%d"
 #~ msgstr "Loading HIP catalogues: %d/%d"
 
+#, c-format
 #~ msgid "Loading SAO catalog: %d/%d"
 #~ msgstr "Loading SAO catalogue: %d/%d"
 
@@ -1882,13 +1866,13 @@ msgstr "Seconds"
 
 #~ msgid ""
 #~ "   Please check for newer versions and send bug reports\n"
-#~ "\t                                   and comments to us at: http://www."
-#~ "stellarium.org\n"
+#~ "\t                                   and comments to us at: "
+#~ "http://www.stellarium.org\n"
 #~ "\n"
 #~ msgstr ""
 #~ "   Please check for newer versions and send bug reports\n"
-#~ "\t                                   and comments to us at: http://www."
-#~ "stellarium.org\n"
+#~ "\t                                   and comments to us at: "
+#~ "http://www.stellarium.org\n"
 #~ "\n"
 
 #~ msgid ""
@@ -1899,11 +1883,10 @@ msgstr "Seconds"
 #~ "\t                            Left Click       : Select object\n"
 #~ "\t                            Right Click      : Unselect\n"
 #~ "\t                            CTRL+Left Click  : Unselect\n"
-#~ "\t                            \\                : Zoom out (planet + "
-#~ "moons if applicable)\n"
+#~ "\t                            \\                : Zoom out (planet + moons "
+#~ "if applicable)\n"
 #~ "\t                            /                : Zoom to selected object\n"
-#~ "\t                            SPACE            : Center on selected "
-#~ "object\n"
+#~ "\t                            SPACE            : Center on selected object\n"
 #~ "\t                            \n"
 #~ msgstr ""
 #~ "Movement & selection:\n"
@@ -1913,11 +1896,10 @@ msgstr "Seconds"
 #~ "\t                            Left Click       : Select object\n"
 #~ "\t                            Right Click      : Unselect\n"
 #~ "\t                            CTRL+Left Click  : Unselect\n"
-#~ "\t                            \\                : Zoom out (planet + "
-#~ "moons if applicable)\n"
+#~ "\t                            \\                : Zoom out (planet + moons "
+#~ "if applicable)\n"
 #~ "\t                            /                : Zoom to selected object\n"
-#~ "\t                            SPACE            : Centre on selected "
-#~ "object\n"
+#~ "\t                            SPACE            : Centre on selected object\n"
 #~ "\t                            \n"
 
 #~ msgid ""
@@ -1928,17 +1910,15 @@ msgstr "Seconds"
 #~ "Constellation labels\n"
 #~ "\t                            R   : Constellation art         E   : "
 #~ "Equatorial grid\n"
-#~ "\t                            Z   : Azimuthal grid            N   : "
-#~ "Nebula labels\n"
-#~ "\t                            P   : Planet labels             G   : "
-#~ "Ground\n"
+#~ "\t                            Z   : Azimuthal grid            N   : Nebula "
+#~ "labels\n"
+#~ "\t                            P   : Planet labels             G   : Ground\n"
 #~ "\t                            A   : Atmosphere                F   : Fog\n"
-#~ "\t                            Q   : Cardinal points           O   : "
-#~ "Toggle moon scaling\n"
-#~ "\t                            T   : Object tracking           S   : "
-#~ "Stars\n"
-#~ "\t                            4 , : Ecliptic line             5 . : "
-#~ "Equator line\n"
+#~ "\t                            Q   : Cardinal points           O   : Toggle "
+#~ "moon scaling\n"
+#~ "\t                            T   : Object tracking           S   : Stars\n"
+#~ "\t                            4 , : Ecliptic line             5 . : Equator "
+#~ "line\n"
 #~ "\t                            \n"
 #~ msgstr ""
 #~ "Display options:\n"
@@ -1948,17 +1928,15 @@ msgstr "Seconds"
 #~ "Constellation labels\n"
 #~ "\t                            R   : Constellation art         E   : "
 #~ "Equatorial grid\n"
-#~ "\t                            Z   : Azimuthal grid            N   : "
-#~ "Nebula labels\n"
-#~ "\t                            P   : Planet labels             G   : "
-#~ "Ground\n"
+#~ "\t                            Z   : Azimuthal grid            N   : Nebula "
+#~ "labels\n"
+#~ "\t                            P   : Planet labels             G   : Ground\n"
 #~ "\t                            A   : Atmosphere                F   : Fog\n"
-#~ "\t                            Q   : Cardinal points           O   : "
-#~ "Toggle moon scaling\n"
-#~ "\t                            T   : Object tracking           S   : "
-#~ "Stars\n"
-#~ "\t                            4 , : Ecliptic line             5 . : "
-#~ "Equator line\n"
+#~ "\t                            Q   : Cardinal points           O   : Toggle "
+#~ "moon scaling\n"
+#~ "\t                            T   : Object tracking           S   : Stars\n"
+#~ "\t                            4 , : Ecliptic line             5 . : Equator "
+#~ "line\n"
 #~ "\t                            \n"
 
 #~ msgid ""
@@ -1986,40 +1964,40 @@ msgstr "Seconds"
 #~ "Time & Date:\n"
 #~ "\t                            6   : Time rate pause           7   : Time "
 #~ "rate 0\n"
-#~ "\t                            8   : Set current time          J   : "
-#~ "Decrease time rate\n"
-#~ "\t                            K   : Normal time rate          L   : "
-#~ "Increase time rate\n"
-#~ "\t                            -   : Back 24 hours             =   : "
-#~ "Forward 24 hours\n"
-#~ "\t                            [   : Back 7 days               ]   : "
-#~ "Forward 7 days\n"
+#~ "\t                            8   : Set current time          J   : Decrease "
+#~ "time rate\n"
+#~ "\t                            K   : Normal time rate          L   : Increase "
+#~ "time rate\n"
+#~ "\t                            -   : Back 24 hours             =   : Forward "
+#~ "24 hours\n"
+#~ "\t                            [   : Back 7 days               ]   : Forward "
+#~ "7 days\n"
 #~ "\t                            \n"
 #~ msgstr ""
 #~ "Time & Date:\n"
 #~ "\t                            6   : Time rate pause           7   : Time "
 #~ "rate 0\n"
-#~ "\t                            8   : Set current time          J   : "
-#~ "Decrease time rate\n"
-#~ "\t                            K   : Normal time rate          L   : "
-#~ "Increase time rate\n"
-#~ "\t                            -   : Back 24 hours             =   : "
-#~ "Forward 24 hours\n"
-#~ "\t                            [   : Back 7 days               ]   : "
-#~ "Forward 7 days\n"
+#~ "\t                            8   : Set current time          J   : Decrease "
+#~ "time rate\n"
+#~ "\t                            K   : Normal time rate          L   : Increase "
+#~ "time rate\n"
+#~ "\t                            -   : Back 24 hours             =   : Forward "
+#~ "24 hours\n"
+#~ "\t                            [   : Back 7 days               ]   : Forward "
+#~ "7 days\n"
 #~ "\t                            \n"
 
 #~ msgid ""
 #~ "During Script Playback:\n"
 #~ "\t                            CTRL + C : End Script\n"
-#~ "\t                            6   : pause script              K   : "
-#~ "resume script\n"
+#~ "\t                            6   : pause script              K   : resume "
+#~ "script\n"
 #~ "\t                            \n"
 #~ msgstr ""
 #~ "During Script Playback:\n"
 #~ "\t                            CTRL + C : End Script\n"
-#~ "\t                            6   : pause script              K   : "
-#~ "resume script\n"
+#~ "\t                            6   : pause script              K   : resume "
+#~ "script\n"
 #~ "\t                            \n"
 
 #~ msgid ""
@@ -2028,6 +2006,12 @@ msgstr "Seconds"
 #~ msgstr ""
 #~ "Misc:\n"
 #~ "\t                            9   : Toggle meteor shower rates\n"
+
+#~ msgid "CTRL + Q : Quit\n"
+#~ msgstr "CTRL + Q : Quit↵\n"
+
+#~ msgid "CMD + Q  : Quit\n"
+#~ msgstr "CMD + Q : Quit↵\n"
 
 #~ msgid "Constellations"
 #~ msgstr "Constellations"
@@ -2058,6 +2042,9 @@ msgstr "Seconds"
 
 #~ msgid "eg. Crux"
 #~ msgstr "e.g. Crux"
+
+#~ msgid "Nebula"
+#~ msgstr "Nebula"
 
 #~ msgid "eg. M83, NGC 7009, IC 2118"
 #~ msgstr "e.g. M83, NGC 7009, IC 2118"
