--- a/po/ro.po
+++ b/po/ro.po
@@ -7,10 +7,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: stellarium\n"
-"Report-Msgid-Bugs-To: stellarium@free.fr\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2006-06-20 20:50+0200\n"
-"PO-Revision-Date: 2006-05-12 08:02+0000\n"
-"Last-Translator: kneekoo <kneekoo@yahoo.com>\n"
+"PO-Revision-Date: 2006-06-21 05:56+0000\n"
+"Last-Translator: thor <thorus@thorus.ro>\n"
 "Language-Team: Romanian <ro@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,8 +25,8 @@ msgid ""
 " -h, --help             Display this help and exit.\n"
 msgstr ""
 "Utilizare:%s [OPŢIUNE]...\n"
-"-v,--versiune ; afişează versiunea şi închide programul.\n"
-"-h,--ajutor ; afişează comenzile de ajutor şi închide programul.\n"
+" -v,--versiune ; afişează versiunea şi închide programul.\n"
+" -h,--ajutor ; afişează comenzile de ajutor şi închide programul.\n"
 
 #: src/main.cpp:76
 #, c-format
@@ -45,7 +45,7 @@ msgstr "Încarc imaginile constelaţiilor: "
 #: src/hip_star.cpp:84 src/hip_star.cpp:132 src/nebula.cpp:94
 #: src/planet.cpp:107 src/planet.cpp:153
 msgid "Magnitude: "
-msgstr "Magnitudine : "
+msgstr "Magnitudine: "
 
 #: src/hip_star.cpp:85 src/hip_star.cpp:133
 msgid " (Variable)"
@@ -93,7 +93,7 @@ msgstr "Se încarcă texturile pentru nebuloase:"
 
 #: src/planet.cpp:120 src/planet.cpp:157
 msgid "AU"
-msgstr "AU"
+msgstr "u.a."
 
 #: src/stel_ui.cpp:503 src/stel_ui.cpp:631
 msgid "Script commander"
@@ -153,7 +153,7 @@ msgstr "Fereastră de configurare"
 
 #: src/stel_ui.cpp:621
 msgid "Night (red) mode"
-msgstr "Vizualizare pentru noapte"
+msgstr "Vizualizare in mod noapte"
 
 #: src/stel_ui.cpp:624
 msgid "Quit [CTRL + Q]"
@@ -193,7 +193,7 @@ msgid ""
 "    and comments to us at: http://www.stellarium.org\n"
 "\n"
 msgstr ""
-"   Pentru noi versiuni şi defecte ale programului\n"
+"   Pentru noi versiuni , buguri ale programului\n"
 "    şi pentru comentarii accesaţi: http://www.stellarium.org\n"
 "\n"
 
@@ -284,9 +284,9 @@ msgid ""
 "\n"
 msgstr ""
 "Ora şi data:\n"
-"6 : Pauză a ratei timpului 7 : Rata de timp 0\n"
-"8 : Setează ora actuală J: Micşorează rata de timp\n"
-"K : Rata normală de timp L : Măreşte rata de timp\n"
+"6 : Opreste curgerea timpului 7 : Viteza curgerii timpului 0\n"
+"8 : Setează ora actuală J: Micşorează viteza curgerii timpului\n"
+"K : Viteza normala a curgerii timpului L : Mareste viteza curgerii timpului\n"
 "- : Înapoi cu 24 de ore = : Înainte cu 24 de ore\n"
 "[ : Înapoi cu 7 zile ] : Înainte cu 7 zile\n"
 "\n"
@@ -298,8 +298,8 @@ msgid ""
 "6   : pause script              K   : resume script\n"
 "\n"
 msgstr ""
-"În Timpul Redării Scriptului\n"
-"CTRL + C : Încheie Scriptul\n"
+"În timpul redării scriptului:\n"
+"CTRL + C : Încheie scriptul\n"
 "6 : opreşte scriptul K : continuă scriptul\n"
 "\n"
 
@@ -313,6 +313,13 @@ msgid ""
 "CTRL + Q : Quit\n"
 "CMD + Q  : Quit\n"
 msgstr ""
+"Diverse:\n"
+"9 : Schimbă intensitatea ploii meteorice\n"
+"CRTL + 0,...,9 : execută directionarea pentru telescopul 0,...,9\n"
+"CTRL + SHIFT + H: inverseaza imaginea pe orizontala\n"
+"CTRL + SHIFT + V: inverseaza imaginea pe verticala\n"
+"CTRL + Q : Inchide\n"
+"CMD + Q : Inchide\n"
 
 #: src/stel_ui.cpp:740
 msgid "Help"
@@ -385,23 +392,23 @@ msgstr "Mărimea Lunii"
 
 #: src/stel_ui_conf.cpp:152
 msgid "Planets Hints"
-msgstr "Indicii despre Planete"
+msgstr "Indicii despre planete"
 
 #: src/stel_ui_conf.cpp:164 src/stel_ui_tuiconf.cpp:399
 msgid "Equatorial Grid"
-msgstr "Grid ecuatorial"
+msgstr "Tabel ecuatorial"
 
 #: src/stel_ui_conf.cpp:169 src/stel_ui_tuiconf.cpp:398
 msgid "Azimuthal Grid"
-msgstr "Grid azimutal"
+msgstr "Tabel azimutal"
 
 #: src/stel_ui_conf.cpp:174 src/stel_ui_tuiconf.cpp:400
 msgid "Equator Line"
-msgstr "Linia ecuatorului"
+msgstr "Ecuatorul"
 
 #: src/stel_ui_conf.cpp:179 src/stel_ui_tuiconf.cpp:401
 msgid "Ecliptic Line"
-msgstr "Linia eclipticii"
+msgstr "Eliptica"
 
 #: src/stel_ui_conf.cpp:190
 msgid "Ground"
@@ -434,7 +441,7 @@ msgstr "Fus orar:"
 
 #: src/stel_ui_conf.cpp:260
 msgid "Using System Default Time Zone"
-msgstr "Utilizare Fus Orar Implicit"
+msgstr "Utilizare fus orar implicit"
 
 #: src/stel_ui_conf.cpp:269
 msgid "Time speed : "
@@ -508,7 +515,7 @@ msgstr ""
 
 #: src/stel_ui_conf.cpp:456
 msgid "Program Language: "
-msgstr "Limba Programului: "
+msgstr "Limba programului: "
 
 #: src/stel_ui_conf.cpp:472 src/stel_ui_tuiconf.cpp:380
 msgid "Sky Language: "
@@ -524,7 +531,7 @@ msgstr "Limba"
 
 #: src/stel_ui_conf.cpp:512
 msgid "Date & Time"
-msgstr "Data şi Ora"
+msgstr "Data şi ora"
 
 #: src/stel_ui_conf.cpp:513
 msgid "Location"
@@ -548,11 +555,11 @@ msgstr "Căutare obiect"
 
 #: src/stel_ui_conf.cpp:655
 msgid "Search for (eg. Saturn, Polaris, HP6218, Orion, M31):"
-msgstr "Caută (eg. Saturn, Polaris, HP6218, Orion, M31):"
+msgstr "Caută (de ex. Saturn, Polaris, HP6218, Orion, M31):"
 
 #: src/stel_ui_conf.cpp:672
 msgid "GO"
-msgstr "Dute"
+msgstr "Du-te"
 
 #: src/stel_ui_conf.cpp:799
 msgid "Enter observatory name"
@@ -580,7 +587,7 @@ msgstr ": Rata record (Leonidele 1966)"
 
 #: src/stel_ui_conf.cpp:967
 msgid "Meteor Rate per minute"
-msgstr "Rata meteorilor pe minut"
+msgstr "Rata meteoriţilor pe minut"
 
 #: src/stel_ui_conf.cpp:988
 msgid "Current Time Speed is x"
@@ -636,7 +643,7 @@ msgstr "Altitudine (m): "
 
 #: src/stel_ui_tuiconf.cpp:360
 msgid "Solar System Body: "
-msgstr "Corp al sistemului solar: "
+msgstr "Corp al Sistemului Solar: "
 
 #: src/stel_ui_tuiconf.cpp:364
 msgid "Sky Time: "
@@ -648,21 +655,19 @@ msgstr "Setează fusul orar: "
 
 #: src/stel_ui_tuiconf.cpp:366
 msgid "Preset Sky Time: "
-msgstr "Preset pentru cer la ora: "
+msgstr "Ora prestabilită a cerului: "
 
 #: src/stel_ui_tuiconf.cpp:367
 msgid "Sky Time At Start-up: "
 msgstr "Ora de vizualizare a cerului la pornire: "
 
 #: src/stel_ui_tuiconf.cpp:368
-#, fuzzy
 msgid "Actual Time"
-msgstr "Setează ora "
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:369
-#, fuzzy
 msgid "Preset Time"
-msgstr "Preset pentru cer la ora: "
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:370
 msgid "Time Display Format: "
@@ -697,48 +702,40 @@ msgid "Twinkling: "
 msgstr "Clipire stele: "
 
 #: src/stel_ui_tuiconf.cpp:389
-#, fuzzy
 msgid "Constellation Lines"
-msgstr "Liniile Constelaţiilor"
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:390
-#, fuzzy
 msgid "Constellation Names"
-msgstr "Numele constelaţiilor"
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:391
-#, fuzzy
 msgid "Constellation Art Intensity"
-msgstr "Imaginile constelaţiilor [R]"
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:392
-#, fuzzy
 msgid "Constellation Boundaries"
-msgstr "Marginile constelaţiilor"
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:394
-#, fuzzy
 msgid "Planet Names"
-msgstr "Planete"
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:395
-#, fuzzy
 msgid "Planet Orbits"
-msgstr "Indicii despre Planete"
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:396
-#, fuzzy
 msgid "Planet Trails"
-msgstr "Planete"
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:397
 msgid "Meridian Line"
 msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:402
-#, fuzzy
 msgid "Nebula Names"
-msgstr "Nebuloase [N]"
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:403
 msgid "Nebula Circles"
@@ -754,7 +751,7 @@ msgstr "Focalizare manuală: "
 
 #: src/stel_ui_tuiconf.cpp:409
 msgid "Object Sizing Rule: "
-msgstr "Regula Dimensionării Obiectului "
+msgstr "Regula dimensionării obiectului "
 
 #: src/stel_ui_tuiconf.cpp:409
 msgid "Point"
@@ -770,7 +767,7 @@ msgstr "Intensitatea Căii Lactee : "
 
 #: src/stel_ui_tuiconf.cpp:412
 msgid "Maximum Nebula Magnitude to Label: "
-msgstr "Magnitudinea Maximă a Nebuloaselor pentru Denumire: "
+msgstr "Magnitudinea maximă a nebuloaselor pentru denumire: "
 
 #: src/stel_ui_tuiconf.cpp:413
 msgid "Zoom Duration: "
@@ -778,7 +775,7 @@ msgstr "Durata focalizării: "
 
 #: src/stel_ui_tuiconf.cpp:414
 msgid "Cursor Timeout: "
-msgstr "Terminat din cursor: "
+msgstr "Timp ascundere cursor: "
 
 #: src/stel_ui_tuiconf.cpp:417
 msgid "Local Script: "
@@ -798,12 +795,11 @@ msgstr "Salvează configuraţia curentă ca implicită : "
 
 #: src/stel_ui_tuiconf.cpp:426
 msgid "Update me via Internet: "
-msgstr "Actualizează prin Internet : "
+msgstr "Actualizează prin internet : "
 
 #: src/stel_ui_tuiconf.cpp:427
-#, fuzzy
 msgid "Set UI Locale: "
-msgstr "Setează locaţia "
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:539
 msgid "Arrow down to load list."
@@ -883,7 +879,7 @@ msgstr "Dione"
 
 #: src/translations.h:51
 msgid "Rhea"
-msgstr "Rhea"
+msgstr "Reea"
 
 #: src/translations.h:52
 msgid "Titan"
@@ -919,7 +915,7 @@ msgstr "Charon"
 
 #: src/translations.h:60
 msgid "Solar System Observer"
-msgstr "Observatorul Sistemului Solar"
+msgstr "Observator al Sistemului Solar"
 
 #: src/translations.h:63 src/s_gui.cpp:2667
 msgid "N"
@@ -942,14 +938,12 @@ msgid "Chinese"
 msgstr ""
 
 #: src/translations.h:70
-#, fuzzy
 msgid "Western"
-msgstr "Uşa vestică"
+msgstr ""
 
 #: src/translations.h:71
-#, fuzzy
 msgid "Polynesian"
-msgstr "Indicii despre Planete"
+msgstr ""
 
 #: src/translations.h:72
 msgid "Egyptian"
@@ -957,7 +951,7 @@ msgstr ""
 
 #: src/translations.h:75
 msgid "Aquila"
-msgstr "Vulturul"
+msgstr "Acvila"
 
 #: src/translations.h:76
 msgid "Andromeda"
@@ -981,7 +975,7 @@ msgstr "Balena"
 
 #: src/translations.h:81
 msgid "Aries"
-msgstr "Berbec"
+msgstr "Berbecul"
 
 #: src/translations.h:82 src/translations.h:152
 msgid "Scutum"
@@ -993,7 +987,7 @@ msgstr "Busola"
 
 #: src/translations.h:84
 msgid "Bootes"
-msgstr "Boarul"
+msgstr "Ursul conducător"
 
 #: src/translations.h:85
 msgid "Caelum"
@@ -1001,15 +995,15 @@ msgstr "Dalta"
 
 #: src/translations.h:86
 msgid "Chamaeleon"
-msgstr "Cameleon"
+msgstr "Cameleonul"
 
 #: src/translations.h:87
 msgid "Cancer"
-msgstr "Rac"
+msgstr "Racul"
 
 #: src/translations.h:88
 msgid "Capricornus"
-msgstr "Capricorn"
+msgstr "Capricornul"
 
 #: src/translations.h:89
 msgid "Carina"
@@ -1125,7 +1119,7 @@ msgstr "Hercule"
 
 #: src/translations.h:117
 msgid "Horologium"
-msgstr "Orologiu"
+msgstr "Orologiul"
 
 #: src/translations.h:118
 msgid "Hydra"
@@ -1169,7 +1163,7 @@ msgstr "Lira"
 
 #: src/translations.h:128
 msgid "Antlia"
-msgstr "Maşina Pneumatică"
+msgstr "Pompa cu aer"
 
 #: src/translations.h:129
 msgid "Microscopium"
@@ -1277,7 +1271,7 @@ msgstr "Platoul"
 
 #: src/translations.h:156
 msgid "Taurus"
-msgstr "Taur"
+msgstr "Taurul"
 
 #: src/translations.h:157
 msgid "Telescopium"
@@ -1301,7 +1295,7 @@ msgstr "Vărsătorul"
 
 #: src/translations.h:162
 msgid "Virgo"
-msgstr "Fecioară"
+msgstr "Fecioara"
 
 #: src/translations.h:163
 msgid "Vela"
@@ -1313,7 +1307,7 @@ msgstr "Piciorul Taurului"
 
 #: src/translations.h:167
 msgid "Two Poles"
-msgstr "Doi stâlpi"
+msgstr "Doi Stâlpi"
 
 #: src/translations.h:168
 msgid "Lion"
@@ -1321,7 +1315,7 @@ msgstr "Leul"
 
 #: src/translations.h:169
 msgid "Two Jaws"
-msgstr "Două fălci"
+msgstr "Două Fălci"
 
 #: src/translations.h:170
 msgid "Sah"
@@ -1381,7 +1375,7 @@ msgstr "Turma"
 
 #: src/translations.h:184
 msgid "Pair of Stars"
-msgstr "Pereche de stele"
+msgstr "Perechea de Stele"
 
 #: src/translations.h:185
 msgid "Khanuwy Fish"
@@ -1397,7 +1391,7 @@ msgstr "Falca"
 
 #: src/translations.h:188
 msgid "Mooring Post"
-msgstr "Stîlpul odgonului"
+msgstr "Stîlpul Odgonului"
 
 #: src/translations.h:189
 msgid "Kenemet"
@@ -1417,19 +1411,19 @@ msgstr "Oaia"
 
 #: src/translations.h:193
 msgid "Stars of Water"
-msgstr "Stelele de apă"
+msgstr "Stelele de Apă"
 
 #: src/translations.h:196
 msgid "Northern Dipper"
-msgstr "Căuşul nordic"
+msgstr "Căuşul Nordic"
 
 #: src/translations.h:197
 msgid "Curved Array"
-msgstr "Şirul curbat"
+msgstr "Şirul Curbat"
 
 #: src/translations.h:198
 msgid "Coiled Thong"
-msgstr "Firul arcuit"
+msgstr "Firul Arcuit"
 
 #: src/translations.h:199
 msgid "Wings"
@@ -1445,7 +1439,7 @@ msgstr "Coada"
 
 #: src/translations.h:202
 msgid "Winnowing Basket"
-msgstr "Coşul de cules"
+msgstr "Coşul de Cules"
 
 #: src/translations.h:203
 msgid "Dipper"
@@ -1505,23 +1499,23 @@ msgstr "Rădăcina"
 
 #: src/translations.h:217
 msgid "Ramparts"
-msgstr "Metereze"
+msgstr "Meterezele"
 
 #: src/translations.h:218
 msgid "Flying Corridor"
-msgstr "Coridorul zburător"
+msgstr "Coridorul Zburător"
 
 #: src/translations.h:219
 msgid "Outer Fence"
-msgstr "Gardul exterior"
+msgstr "Gardul Exterior"
 
 #: src/translations.h:220
 msgid "Ford"
-msgstr "Vad"
+msgstr "Vadul"
 
 #: src/translations.h:221
 msgid "Seven Excellencies"
-msgstr "Şapte excelenţe"
+msgstr "Şapte Excelenţe"
 
 #: src/translations.h:222
 msgid "Market"
@@ -1529,11 +1523,11 @@ msgstr "Piaţa"
 
 #: src/translations.h:223
 msgid "Five Chariots"
-msgstr "Cinci căruţe"
+msgstr "Cinci Căruţe"
 
 #: src/translations.h:224
 msgid "Rolled Tongue"
-msgstr "Limba rulată"
+msgstr "Limba Rulată"
 
 #: src/translations.h:226
 msgid "Toilet"
@@ -1545,11 +1539,11 @@ msgstr "Ecranul"
 
 #: src/translations.h:228
 msgid "Soldiers Market"
-msgstr "Piaţa ostaşilor"
+msgstr "Piaţa Ostaşilor"
 
 #: src/translations.h:229
 msgid "Square Granary"
-msgstr "Hambarul pătrat"
+msgstr "Hambarul Pătrat"
 
 #: src/translations.h:230
 msgid "Three Stars"
@@ -1585,7 +1579,7 @@ msgstr "Pajiştea"
 
 #: src/translations.h:238
 msgid "Circular Granary"
-msgstr "Hambarul rotund"
+msgstr "Hambarul Rotund"
 
 #: src/translations.h:239
 msgid "Purple Palace"
@@ -1593,7 +1587,7 @@ msgstr "Palatul Violet"
 
 #: src/translations.h:240
 msgid "Extended Net"
-msgstr "Plasa extinsă"
+msgstr "Plasa Extinsă"
 
 #: src/translations.h:241
 msgid "Arsenal"
@@ -1629,7 +1623,7 @@ msgstr "Templul Zeului Pământului"
 
 #: src/translations.h:250
 msgid "Bow and Arrow"
-msgstr "Arcul cu săgeată"
+msgstr "Arcul cu Săgeată"
 
 #: src/translations.h:251
 msgid "Pestle"
@@ -1649,15 +1643,15 @@ msgstr "Trăznetul"
 
 #: src/translations.h:255
 msgid "Chariot Yard"
-msgstr "Curtea caleştilor"
+msgstr "Curtea Caleştilor"
 
 #: src/translations.h:256
 msgid "Good Gourd"
-msgstr "Dovleacul bun"
+msgstr "Dovleacul Bun"
 
 #: src/translations.h:257
 msgid "Rotten Gourd"
-msgstr "Dovleacul stricat"
+msgstr "Dovleacul Stricat"
 
 #: src/translations.h:258
 msgid "Encampment"
@@ -1721,7 +1715,7 @@ msgstr "Steagul Stâng"
 
 #: src/translations.h:273
 msgid "Drumstick"
-msgstr "Băţul tobei"
+msgstr "Băţul Tobei"
 
 #: src/translations.h:274
 msgid "Bond"
@@ -1729,19 +1723,19 @@ msgstr "Legătura"
 
 #: src/translations.h:275
 msgid "Woman's Bed"
-msgstr "Patul femeii"
+msgstr "Patul Femeii"
 
 #: src/translations.h:276
 msgid "Western Door"
-msgstr "Uşa vestică"
+msgstr "Uşa Vestică"
 
 #: src/translations.h:277
 msgid "Eastern Door"
-msgstr "Uşa estică"
+msgstr "Uşa Estică"
 
 #: src/translations.h:278
 msgid "Farmland"
-msgstr "Teren arabil"
+msgstr "Ogorul"
 
 #: src/translations.h:279
 msgid "Star"
@@ -1749,7 +1743,7 @@ msgstr "Stea"
 
 #: src/translations.h:280
 msgid "Ghosts"
-msgstr "Stafii"
+msgstr "Stafiile"
 
 #: src/translations.h:281
 msgid "Xuanyuan"
@@ -1761,7 +1755,7 @@ msgstr "Trepied"
 
 #: src/translations.h:283
 msgid "Neck"
-msgstr "Gât"
+msgstr "Gâtul"
 
 #: src/translations.h:284
 msgid "Zaofu"
@@ -1769,7 +1763,7 @@ msgstr "Zaofu"
 
 #: src/translations.h:285
 msgid "Market Officer"
-msgstr "Funcţionarul pieţei"
+msgstr "Funcţionarul Pieţei"
 
 #: src/translations.h:286
 msgid "Banner of Three Stars"
@@ -1781,7 +1775,7 @@ msgstr "Liberatorul"
 
 #: src/translations.h:290
 msgid "Cat's Cradle"
-msgstr "Coşul pisicii"
+msgstr "Coşul Pisicii"
 
 #: src/translations.h:291
 msgid "Voice of Joy"
@@ -1809,7 +1803,7 @@ msgstr "Fregata"
 
 #: src/translations.h:297
 msgid "Cared for by Moon"
-msgstr "În grija Lunii"
+msgstr "În Grija Lunii"
 
 #: src/translations.h:298
 msgid "Dolphin"
@@ -1821,11 +1815,11 @@ msgstr ""
 
 #: src/s_gui.cpp:2208 src/s_gui.cpp:2254
 msgid "Cancel"
-msgstr "Anulează"
+msgstr "Renunţă"
 
 #: src/s_gui.cpp:2226 src/s_gui.cpp:2252
 msgid "OK"
-msgstr "Ok"
+msgstr "OK"
 
 #: src/s_gui.cpp:2722
 msgid "Year"
@@ -1850,14 +1844,3 @@ msgstr "Minute"
 #: src/s_gui.cpp:2737
 msgid "Seconds"
 msgstr "Secunde"
-
-#~ msgid ""
-#~ "Misc:\n"
-#~ "9   : Toggle meteor shower rates\n"
-#~ msgstr "9 : Comută rata de cădere a meteoriţilor\n"
-
-#~ msgid "CTRL + Q : Quit\n"
-#~ msgstr "CTRL + Q : Ieşire\n"
-
-#~ msgid "CMD + Q  : Quit\n"
-#~ msgstr "CMD + Q : Ieşire\n"
