--- a/po/tr.po
+++ b/po/tr.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: stellarium\n"
 "Report-Msgid-Bugs-To: stellarium@free.fr\n"
 "POT-Creation-Date: 2006-06-20 20:50+0200\n"
-"PO-Revision-Date: 2006-05-17 16:22+0000\n"
+"PO-Revision-Date: 2006-06-24 08:52+0000\n"
 "Last-Translator: Ali Isingor <isingor@gmail.com>\n"
 "Language-Team: <tr@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -35,7 +35,7 @@ msgstr "%s: Yanlış komut satırı parametresi\n"
 #: src/main.cpp:77
 #, c-format
 msgid "Try `%s --help' for more information.\n"
-msgstr "Daha fazla bilgilendirilmek için `%s --help' yazınız.\n"
+msgstr "Daha fazla bilgi için `%s --help' yazın.\n"
 
 #: src/constellation_mgr.cpp:174
 msgid "Loading Constellation Art: "
@@ -652,14 +652,12 @@ msgid "Sky Time At Start-up: "
 msgstr "Açılışta Gök Zamanı: "
 
 #: src/stel_ui_tuiconf.cpp:368
-#, fuzzy
 msgid "Actual Time"
-msgstr "Saati Ayarla "
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:369
-#, fuzzy
 msgid "Preset Time"
-msgstr "Gök Zamanını Ayarla: "
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:370
 msgid "Time Display Format: "
@@ -694,53 +692,44 @@ msgid "Twinkling: "
 msgstr "Pırıldama: "
 
 #: src/stel_ui_tuiconf.cpp:389
-#, fuzzy
 msgid "Constellation Lines"
-msgstr "Takımyıldızı Çizgileri"
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:390
-#, fuzzy
 msgid "Constellation Names"
-msgstr "Takımyıldızlarının Adları"
+msgstr "Takımyıldızı Adları"
 
 #: src/stel_ui_tuiconf.cpp:391
-#, fuzzy
 msgid "Constellation Art Intensity"
-msgstr "Takımyıldızı Göstergeleri [R]"
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:392
-#, fuzzy
 msgid "Constellation Boundaries"
-msgstr "Takımyıldızı Sınırları"
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:394
-#, fuzzy
 msgid "Planet Names"
-msgstr "Gezegenler"
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:395
-#, fuzzy
 msgid "Planet Orbits"
-msgstr "Gezegen İşaretleyicileri"
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:396
-#, fuzzy
 msgid "Planet Trails"
-msgstr "Gezegenler"
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:397
 msgid "Meridian Line"
 msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:402
-#, fuzzy
 msgid "Nebula Names"
-msgstr "Bulutsular [N]"
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:403
-#, fuzzy
 msgid "Nebula Circles"
-msgstr "Bulutsu"
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:407
 msgid "Landscape: "
@@ -799,9 +788,8 @@ msgid "Update me via Internet: "
 msgstr "İnternet aracılığı ile güncelle: "
 
 #: src/stel_ui_tuiconf.cpp:427
-#, fuzzy
 msgid "Set UI Locale: "
-msgstr "Konumu Ayarla "
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:539
 msgid "Arrow down to load list."
@@ -944,9 +932,8 @@ msgid "Western"
 msgstr ""
 
 #: src/translations.h:71
-#, fuzzy
 msgid "Polynesian"
-msgstr "Gezegen İşaretleyicileri"
+msgstr ""
 
 #: src/translations.h:72
 msgid "Egyptian"
@@ -1306,11 +1293,11 @@ msgstr "Yelken"
 
 #: src/translations.h:166
 msgid "Bull's Foreleg"
-msgstr ""
+msgstr "Boğanın Ön Ayağı"
 
 #: src/translations.h:167
 msgid "Two Poles"
-msgstr ""
+msgstr "Kutuplar"
 
 #: src/translations.h:168
 msgid "Lion"
@@ -1318,7 +1305,7 @@ msgstr "Aslan"
 
 #: src/translations.h:169
 msgid "Two Jaws"
-msgstr ""
+msgstr "İki Çene"
 
 #: src/translations.h:170
 msgid "Sah"
@@ -1338,15 +1325,15 @@ msgstr "Üçgen"
 
 #: src/translations.h:174
 msgid "Ferry Boat"
-msgstr ""
+msgstr "Feribot"
 
 #: src/translations.h:175 src/translations.h:246
 msgid "Boat"
-msgstr ""
+msgstr "Tekne"
 
 #: src/translations.h:176
 msgid "Crocodile"
-msgstr ""
+msgstr "Timsah"
 
 #: src/translations.h:177
 msgid "Selkis"
@@ -1354,7 +1341,7 @@ msgstr "Selkis"
 
 #: src/translations.h:178
 msgid "Prow"
-msgstr ""
+msgstr "Pruva"
 
 #: src/translations.h:179
 msgid "Horus"
@@ -1378,11 +1365,11 @@ msgstr "Flok"
 
 #: src/translations.h:184
 msgid "Pair of Stars"
-msgstr ""
+msgstr "Yıldız Çifti"
 
 #: src/translations.h:185
 msgid "Khanuwy Fish"
-msgstr ""
+msgstr "Hanuvi Balığı"
 
 #: src/translations.h:186 src/translations.h:225
 msgid "Net"
@@ -1390,11 +1377,11 @@ msgstr "Ağ"
 
 #: src/translations.h:187
 msgid "Jaw"
-msgstr ""
+msgstr "Çene"
 
 #: src/translations.h:188
 msgid "Mooring Post"
-msgstr ""
+msgstr "Palamar Babası"
 
 #: src/translations.h:189
 msgid "Kenemet"
@@ -1414,7 +1401,7 @@ msgstr "Koyun"
 
 #: src/translations.h:193
 msgid "Stars of Water"
-msgstr ""
+msgstr "Su Yıldızları"
 
 #: src/translations.h:196
 msgid "Northern Dipper"
@@ -1430,7 +1417,7 @@ msgstr ""
 
 #: src/translations.h:199
 msgid "Wings"
-msgstr ""
+msgstr "Kanatlar"
 
 #: src/translations.h:200
 msgid "Chariot"
@@ -1446,27 +1433,27 @@ msgstr ""
 
 #: src/translations.h:203
 msgid "Dipper"
-msgstr ""
+msgstr "Maşrapa"
 
 #: src/translations.h:204
 msgid "Drum"
-msgstr ""
+msgstr "Davul"
 
 #: src/translations.h:205
 msgid "Three Steps"
-msgstr ""
+msgstr "Üç Adım"
 
 #: src/translations.h:206
 msgid "Imperial Guards"
-msgstr ""
+msgstr "İmparatorluk Muhafızları"
 
 #: src/translations.h:207
 msgid "Horn"
-msgstr ""
+msgstr "Boynuz"
 
 #: src/translations.h:208
 msgid "Willow"
-msgstr ""
+msgstr "Söğüt"
 
 #: src/translations.h:209
 msgid "Imperial Passageway"
@@ -1494,7 +1481,7 @@ msgstr "Duvar"
 
 #: src/translations.h:215
 msgid "Legs"
-msgstr ""
+msgstr "Bacaklar"
 
 #: src/translations.h:216
 msgid "Root"
@@ -1502,11 +1489,11 @@ msgstr "Kök"
 
 #: src/translations.h:217
 msgid "Ramparts"
-msgstr ""
+msgstr "Siperler"
 
 #: src/translations.h:218
 msgid "Flying Corridor"
-msgstr ""
+msgstr "Uçuş Koridoru"
 
 #: src/translations.h:219
 msgid "Outer Fence"
@@ -1514,7 +1501,7 @@ msgstr ""
 
 #: src/translations.h:220
 msgid "Ford"
-msgstr ""
+msgstr "Sığlık"
 
 #: src/translations.h:221
 msgid "Seven Excellencies"
@@ -1526,7 +1513,7 @@ msgstr "Pazar Yeri"
 
 #: src/translations.h:223
 msgid "Five Chariots"
-msgstr ""
+msgstr "Beş Savaş Arabası"
 
 #: src/translations.h:224
 msgid "Rolled Tongue"
@@ -1542,11 +1529,11 @@ msgstr ""
 
 #: src/translations.h:228
 msgid "Soldiers Market"
-msgstr ""
+msgstr "Asker Pazarı"
 
 #: src/translations.h:229
 msgid "Square Granary"
-msgstr ""
+msgstr "Kare Tahıl Ambarı"
 
 #: src/translations.h:230
 msgid "Three Stars"
@@ -1570,23 +1557,23 @@ msgstr "Kuzey Irmağı"
 
 #: src/translations.h:235
 msgid "Five Feudal Kings"
-msgstr ""
+msgstr "Beş Derebeyi"
 
 #: src/translations.h:236
 msgid "Orchard"
-msgstr ""
+msgstr "Meyve Bahçesi"
 
 #: src/translations.h:237
 msgid "Meadows"
-msgstr ""
+msgstr "Çayır"
 
 #: src/translations.h:238
 msgid "Circular Granary"
-msgstr ""
+msgstr "Yuvarlak Tahıl Ambarı"
 
 #: src/translations.h:239
 msgid "Purple Palace"
-msgstr ""
+msgstr "Kraliyet Sarayı"
 
 #: src/translations.h:240
 msgid "Extended Net"
@@ -1610,7 +1597,7 @@ msgstr ""
 
 #: src/translations.h:245
 msgid "Lance"
-msgstr ""
+msgstr "Mızrak"
 
 #: src/translations.h:247
 msgid "Mausoleum"
@@ -1630,11 +1617,11 @@ msgstr "Ok ve Yay"
 
 #: src/translations.h:251
 msgid "Pestle"
-msgstr ""
+msgstr "Havaneli"
 
 #: src/translations.h:252
 msgid "Mortar"
-msgstr ""
+msgstr "Havan"
 
 #: src/translations.h:253
 msgid "Rooftop"
@@ -1642,7 +1629,7 @@ msgstr ""
 
 #: src/translations.h:254
 msgid "Thunderbolt"
-msgstr ""
+msgstr "Yıldırım"
 
 #: src/translations.h:255
 msgid "Chariot Yard"
@@ -1658,11 +1645,11 @@ msgstr ""
 
 #: src/translations.h:258
 msgid "Encampment"
-msgstr ""
+msgstr "Ordugâh"
 
 #: src/translations.h:259
 msgid "Thunder and Lightning"
-msgstr ""
+msgstr "Gökgürültüsü ve Şimşek"
 
 #: src/translations.h:260
 msgid "Palace Gate"
@@ -1670,7 +1657,7 @@ msgstr "Saray Kapısı"
 
 #: src/translations.h:261
 msgid "Emptiness"
-msgstr ""
+msgstr "Yoksunluk"
 
 #: src/translations.h:262
 msgid "Weaving Girl"
@@ -1702,7 +1689,7 @@ msgstr ""
 
 #: src/translations.h:269
 msgid "Flail"
-msgstr ""
+msgstr "Harman Döven"
 
 #: src/translations.h:270
 msgid "Spear"
@@ -1710,15 +1697,15 @@ msgstr "Mızrak"
 
 #: src/translations.h:271
 msgid "Right Flag"
-msgstr ""
+msgstr "Sağ Sancak"
 
 #: src/translations.h:272
 msgid "Left Flag"
-msgstr ""
+msgstr "Sol Sancak"
 
 #: src/translations.h:273
 msgid "Drumstick"
-msgstr ""
+msgstr "Tokmak"
 
 #: src/translations.h:274
 msgid "Bond"
@@ -1726,11 +1713,11 @@ msgstr ""
 
 #: src/translations.h:275
 msgid "Woman's Bed"
-msgstr ""
+msgstr "Kadının Yatağı"
 
 #: src/translations.h:276
 msgid "Western Door"
-msgstr ""
+msgstr "Batı Kapısı"
 
 #: src/translations.h:277
 msgid "Eastern Door"
@@ -1738,7 +1725,7 @@ msgstr "Doğu Kapısı"
 
 #: src/translations.h:278
 msgid "Farmland"
-msgstr ""
+msgstr "Çiftlik Evi"
 
 #: src/translations.h:279
 msgid "Star"
@@ -1746,7 +1733,7 @@ msgstr "Yıldız"
 
 #: src/translations.h:280
 msgid "Ghosts"
-msgstr ""
+msgstr "Hayaletler"
 
 #: src/translations.h:281
 msgid "Xuanyuan"
@@ -1758,7 +1745,7 @@ msgstr "Üç Ayak"
 
 #: src/translations.h:283
 msgid "Neck"
-msgstr ""
+msgstr "Boyun"
 
 #: src/translations.h:284
 msgid "Zaofu"
@@ -1774,7 +1761,7 @@ msgstr ""
 
 #: src/translations.h:289
 msgid "Bailer"
-msgstr ""
+msgstr "Kefil"
 
 #: src/translations.h:290
 msgid "Cat's Cradle"
@@ -1786,7 +1773,7 @@ msgstr ""
 
 #: src/translations.h:292
 msgid "The Seven"
-msgstr ""
+msgstr "Yedili"
 
 #: src/translations.h:293
 msgid "Maui's Fishhook"
@@ -1849,19 +1836,6 @@ msgid "Seconds"
 msgstr "Saniye"
 
 #~ msgid ""
-#~ "Misc:\n"
-#~ "9   : Toggle meteor shower rates\n"
-#~ msgstr ""
-#~ "Karışık:\n"
-#~ "9 : Meteor yağmuru yoğunluğunu ayarla\n"
-
-#~ msgid "CTRL + Q : Quit\n"
-#~ msgstr "CTRL + Q : Çık\n"
-
-#~ msgid "CMD + Q  : Quit\n"
-#~ msgstr "CMD + Q: Çık\n"
-
-#~ msgid ""
 #~ "Please check last version and send bug report & comments \n"
 #~ "on stellarium web page : http://www.stellarium.org\n"
 #~ "\n"
@@ -1873,14 +1847,13 @@ msgstr "Saniye"
 #~ msgid ""
 #~ "ERROR : I can't find the datas directories in :\n"
 #~ "%s/ nor in ./ nor in ../\n"
-#~ "You may fully install the software (type \"make install\" on POSIX "
-#~ "systems)\n"
+#~ "You may fully install the software (type \"make install\" on POSIX systems)\n"
 #~ "or launch the application from the stellarium package directory.\n"
 #~ msgstr ""
 #~ "HATA: Şu dizinlerde veri bulamadım:\n"
 #~ "%s/ ne de ./ ne de../\n"
-#~ "Yazılımı yeniden yüklemeyi deneyebilir (POSIX sistemlerde \"make install"
-#~ "\" yazarak)\n"
+#~ "Yazılımı yeniden yüklemeyi deneyebilir (POSIX sistemlerde \"make install\" "
+#~ "yazarak)\n"
 #~ "ya da yazılımı Stellarium paket dizininden başlatabilirsiniz.\n"
 
 #~ msgid "> Found data files in %s : local version.\n"
@@ -2053,6 +2026,12 @@ msgstr "Saniye"
 #~ "CTRL + S : Ekran görüntüsü al\n"
 #~ "CTRL + R : Betik kayıt  modu\n"
 
+#~ msgid "CTRL + Q : Quit\n"
+#~ msgstr "CTRL + Q : Çık\n"
+
+#~ msgid "CMD + Q  : Quit\n"
+#~ msgstr "CMD + Q: Çık\n"
+
 #~ msgid "Constellations"
 #~ msgstr "Takımyıldızları"
 
@@ -2109,6 +2088,9 @@ msgstr "Saniye"
 
 #~ msgid "eg. Pluto or Io"
 #~ msgstr "Örn. Pluton ya da Ay"
+
+#~ msgid "Nebula"
+#~ msgstr "Bulutsu"
 
 #~ msgid "Planets & Moons"
 #~ msgstr "Gezegenler ve Ayları"
