--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -7,9 +7,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: stellarium\n"
-"Report-Msgid-Bugs-To: stellarium@free.fr\n"
+"Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2006-06-20 20:50+0200\n"
-"PO-Revision-Date: 2006-04-26 16:07+0000\n"
+"PO-Revision-Date: 2006-06-22 12:58+0000\n"
 "Last-Translator: Norman Prescott <norman@nexint.info>\n"
 "Language-Team: Chinese (China) <zh_CN@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -23,14 +23,14 @@ msgid ""
 " -v, --version          Output version information and exit.\n"
 " -h, --help             Display this help and exit.\n"
 msgstr ""
-"Usage: %s [OPTION] ...↵\n"
+"命令行用法: %s [选项] ...↵\n"
 " -v, --version 显示版本信息并退出↵\n"
 " -h, --help 显示帮助并退出↵\n"
 
 #: src/main.cpp:76
 #, c-format
 msgid "%s: Bad command line argument(s)\n"
-msgstr "%s: 命令语法错误↵\n"
+msgstr "%s: 命令行语法错误↵\n"
 
 #: src/main.cpp:77
 #, c-format
@@ -104,7 +104,7 @@ msgstr "无效的脚本命令"
 
 #: src/stel_ui.cpp:596
 msgid "Drawing of the Constellations [C]"
-msgstr "星座连线 [C]"
+msgstr "星座简图 [C]"
 
 #: src/stel_ui.cpp:598
 msgid "Names of the Constellations [V]"
@@ -144,7 +144,7 @@ msgstr "帮助 [H]"
 
 #: src/stel_ui.cpp:616
 msgid "Equatorial/Altazimuthal Mount [ENTER]"
-msgstr "赤道仪/经纬仪 [ENTER]"
+msgstr "赤道仪/经纬仪 [回车]"
 
 #: src/stel_ui.cpp:618
 msgid "Configuration window"
@@ -184,16 +184,16 @@ msgstr "增加时间速度 [L]"
 
 #: src/stel_ui.cpp:645
 msgid "Return to Current Time"
-msgstr "回到现在时间"
+msgstr "回到当前时间"
 
 #: src/stel_ui.cpp:654
+#, fuzzy
 msgid ""
 "   Please check for newer versions and send bug reports\n"
 "    and comments to us at: http://www.stellarium.org\n"
 "\n"
 msgstr ""
-"   如需检查最新版本、报告程序错误以及给我们提意见，请到↵\n"
-"    http://www.stellarium.org↵\n"
+"   请到http://www.stellarium.org 检查新版、报告错误和发表评议↵\n"
 "↵\n"
 "\n"
 
@@ -217,7 +217,7 @@ msgid ""
 msgstr ""
 "移动与选定:↵\n"
 "方向键:移动视野↵\n"
-"Page Up/Down : 放缩↵\n"
+"Page Up/Page Down : 放缩↵\n"
 "CTRL+Up/Down : 放缩↵\n"
 "鼠标左键:选定天体↵\n"
 "鼠标右键:取消选定↵\n"
@@ -245,15 +245,15 @@ msgid ""
 msgstr ""
 "显示选项: ↵\n"
 "ENTER : 赤道仪/经纬仪↵\n"
-"F1 : 全屏显示↵\n"
-"C : 星座连线 V : 星座名称↵\n"
+"F1 : 全屏显示(如果系统支持)↵\n"
+"C : 星座简图 V : 星座名称↵\n"
 "R : 星座图像 E : 赤道坐标网格↵\n"
 "Z : 地平坐标网格 N : 星云名称↵\n"
 "P : 行星名称 G : 地面↵\n"
 "A : 大气 F : 雾↵\n"
 "Q : 方位基点 O : 月球缩放↵\n"
 "T : 跟踪天体 S : 恒星↵\n"
-"4 , : 黄道 5 . : 赤道↵\n"
+"4 , : 黄道 5 . : 天赤道↵\n"
 "↵\n"
 "\n"
 
@@ -277,6 +277,7 @@ msgstr ""
 "\n"
 
 #: src/stel_ui.cpp:715
+#, fuzzy
 msgid ""
 "Time & Date:\n"
 "6   : Time rate pause           7   : Time rate 0\n"
@@ -288,7 +289,7 @@ msgid ""
 msgstr ""
 "时间与日期: ↵\n"
 "6 : 暂停时间 7 : 停止时间↵\n"
-"8 : 回到现在时间 J : 减慢时间速度↵\n"
+"8 : 回到当前时间 J : 减慢时间速度↵\n"
 "K : 正常时间速度 L : 增加时间速度↵\n"
 "- : 后退24小时 = : 前进24小時↵\n"
 "[ : 后退7天 ] : 前进7天↵\n"
@@ -318,6 +319,13 @@ msgid ""
 "CTRL + Q : Quit\n"
 "CMD + Q  : Quit\n"
 msgstr ""
+"杂项:\n"
+"9 : 改变流星雨流量\n"
+"CTRL + 0,..,9 : 执行望远镜的GOTO命令 0,..,9\n"
+"CTRL + SHIFT + H: 水平翻转图像\n"
+"CTRL + SHIFT + V: 竖直翻转图像\n"
+"CTRL + Q : 退出\n"
+"CMD + Q : 退出\n"
 
 #: src/stel_ui.cpp:740
 msgid "Help"
@@ -328,12 +336,13 @@ msgid "Command recording stopped."
 msgstr "命令记录停止."
 
 #: src/stel_ui.cpp:1010
+#, fuzzy
 msgid "Recording commands to script file:\n"
-msgstr "记录命令到脚本文件:↵\n"
+msgstr "向脚本文件记录命令:↵\n"
 
 #: src/stel_ui.cpp:1012
 msgid "Hit CTRL-R again to stop.\n"
-msgstr "再次CTRL+R以停止记录.↵\n"
+msgstr "再击CTRL+R以中断.↵\n"
 
 #: src/stel_ui.cpp:1016
 msgid "Error: Unable to open script file to record commands."
@@ -348,8 +357,9 @@ msgid "Stars"
 msgstr "恒星"
 
 #: src/stel_ui_conf.cpp:62
+#, fuzzy
 msgid "Star Names. Up to mag :"
-msgstr "显示恒星名. 最暗星等:"
+msgstr "星名. 最暗星等:"
 
 #: src/stel_ui_conf.cpp:74
 msgid "Star Twinkle. Amount :"
@@ -357,7 +367,7 @@ msgstr "恒星闪烁度:"
 
 #: src/stel_ui_conf.cpp:90
 msgid "Constellations Lines"
-msgstr "星座连线"
+msgstr "星座简图"
 
 #: src/stel_ui_conf.cpp:95
 msgid "Constellations Names"
@@ -368,24 +378,28 @@ msgid "Constellations Boundaries"
 msgstr "星座边界"
 
 #: src/stel_ui_conf.cpp:105
+#, fuzzy
 msgid "Selected Constellation Only"
-msgstr "仅选定星座"
+msgstr "仅已选的星座"
 
 #: src/stel_ui_conf.cpp:116
+#, fuzzy
 msgid "Nebulas Names. Up to mag :"
-msgstr "星云名称. 最暗星等:"
+msgstr "星云名. 最暗星等:"
 
 #: src/stel_ui_conf.cpp:129
+#, fuzzy
 msgid "Also display Nebulas without textures"
-msgstr ""
+msgstr "连带显示不带图案星云"
 
 #: src/stel_ui_conf.cpp:140
 msgid "Planets"
 msgstr "行星"
 
 #: src/stel_ui_conf.cpp:145
+#, fuzzy
 msgid "Moon Scale"
-msgstr "月球缩放"
+msgstr "月球尺度"
 
 #: src/stel_ui_conf.cpp:152
 msgid "Planets Hints"
@@ -441,10 +455,12 @@ msgid "Using System Default Time Zone"
 msgstr "使用系统默认时区"
 
 #: src/stel_ui_conf.cpp:269
+#, fuzzy
 msgid "Time speed : "
 msgstr "时间速度: "
 
 #: src/stel_ui_conf.cpp:277
+#, fuzzy
 msgid ""
 "Use key J and L to decrease and increase\n"
 "   time speed.\n"
@@ -507,11 +523,11 @@ msgstr "选择地景:"
 
 #: src/stel_ui_conf.cpp:433 src/stel_ui_conf.cpp:888
 msgid "Author: "
-msgstr ""
+msgstr "作者: "
 
 #: src/stel_ui_conf.cpp:456
 msgid "Program Language: "
-msgstr ""
+msgstr "程序语言： "
 
 #: src/stel_ui_conf.cpp:472 src/stel_ui_tuiconf.cpp:380
 msgid "Sky Language: "
@@ -519,7 +535,7 @@ msgstr "星空语言: "
 
 #: src/stel_ui_conf.cpp:490 src/stel_ui_tuiconf.cpp:376
 msgid "Sky Culture: "
-msgstr "星空文化: "
+msgstr "星空名称类型: "
 
 #: src/stel_ui_conf.cpp:511
 msgid "Language"
@@ -543,7 +559,7 @@ msgstr "影像"
 
 #: src/stel_ui_conf.cpp:516
 msgid "Rendering"
-msgstr "显示"
+msgstr "渲染"
 
 #: src/stel_ui_conf.cpp:648
 msgid "Object Search"
@@ -551,11 +567,11 @@ msgstr "天体搜索"
 
 #: src/stel_ui_conf.cpp:655
 msgid "Search for (eg. Saturn, Polaris, HP6218, Orion, M31):"
-msgstr ""
+msgstr "搜索（比如：Saturn, Polaris, HP6218, Orion, M31)"
 
 #: src/stel_ui_conf.cpp:672
 msgid "GO"
-msgstr ""
+msgstr "去"
 
 #: src/stel_ui_conf.cpp:799
 msgid "Enter observatory name"
@@ -563,7 +579,7 @@ msgstr "输入天文台名称"
 
 #: src/stel_ui_conf.cpp:889
 msgid "Info: "
-msgstr ""
+msgstr "信息: "
 
 #: src/stel_ui_conf.cpp:941
 msgid ": Normal rate"
@@ -658,14 +674,12 @@ msgid "Sky Time At Start-up: "
 msgstr "启动时的星空时间: "
 
 #: src/stel_ui_tuiconf.cpp:368
-#, fuzzy
 msgid "Actual Time"
-msgstr "设置时间 "
+msgstr "实际时间"
 
 #: src/stel_ui_tuiconf.cpp:369
-#, fuzzy
 msgid "Preset Time"
-msgstr "预设星空时间: "
+msgstr "预设时间"
 
 #: src/stel_ui_tuiconf.cpp:370
 msgid "Time Display Format: "
@@ -700,52 +714,44 @@ msgid "Twinkling: "
 msgstr "闪烁: "
 
 #: src/stel_ui_tuiconf.cpp:389
-#, fuzzy
 msgid "Constellation Lines"
 msgstr "星座连线"
 
 #: src/stel_ui_tuiconf.cpp:390
-#, fuzzy
 msgid "Constellation Names"
 msgstr "星座名称"
 
 #: src/stel_ui_tuiconf.cpp:391
-#, fuzzy
 msgid "Constellation Art Intensity"
-msgstr "星座图像 [R]"
+msgstr "星座图象亮度"
 
 #: src/stel_ui_tuiconf.cpp:392
-#, fuzzy
 msgid "Constellation Boundaries"
 msgstr "星座边界"
 
 #: src/stel_ui_tuiconf.cpp:394
-#, fuzzy
 msgid "Planet Names"
-msgstr "行星"
+msgstr "行星名称"
 
 #: src/stel_ui_tuiconf.cpp:395
-#, fuzzy
 msgid "Planet Orbits"
-msgstr "行星位置提示"
+msgstr "行星轨道"
 
 #: src/stel_ui_tuiconf.cpp:396
-#, fuzzy
 msgid "Planet Trails"
-msgstr "行星"
+msgstr "行星轨迹"
 
 #: src/stel_ui_tuiconf.cpp:397
 msgid "Meridian Line"
-msgstr ""
+msgstr "子午线"
 
 #: src/stel_ui_tuiconf.cpp:402
-#, fuzzy
 msgid "Nebula Names"
-msgstr "星云 [N]"
+msgstr "星云名称"
 
 #: src/stel_ui_tuiconf.cpp:403
 msgid "Nebula Circles"
-msgstr ""
+msgstr "星云圆圈"
 
 #: src/stel_ui_tuiconf.cpp:407
 msgid "Landscape: "
@@ -804,13 +810,12 @@ msgid "Update me via Internet: "
 msgstr "网上更新: "
 
 #: src/stel_ui_tuiconf.cpp:427
-#, fuzzy
 msgid "Set UI Locale: "
-msgstr "设置位置 "
+msgstr ""
 
 #: src/stel_ui_tuiconf.cpp:539
 msgid "Arrow down to load list."
-msgstr ""
+msgstr "按向下的箭头以载入列表"
 
 #: src/translations.h:33
 msgid "Sun"
@@ -949,9 +954,8 @@ msgid "Western"
 msgstr ""
 
 #: src/translations.h:71
-#, fuzzy
 msgid "Polynesian"
-msgstr "行星位置提示"
+msgstr ""
 
 #: src/translations.h:72
 msgid "Egyptian"
@@ -1311,7 +1315,7 @@ msgstr "船帆座"
 
 #: src/translations.h:166
 msgid "Bull's Foreleg"
-msgstr ""
+msgstr "公牛的前腿"
 
 #: src/translations.h:167
 msgid "Two Poles"
@@ -1319,7 +1323,7 @@ msgstr ""
 
 #: src/translations.h:168
 msgid "Lion"
-msgstr ""
+msgstr "狮子"
 
 #: src/translations.h:169
 msgid "Two Jaws"
@@ -1455,7 +1459,7 @@ msgstr "斗"
 
 #: src/translations.h:204
 msgid "Drum"
-msgstr ""
+msgstr "河鼓"
 
 #: src/translations.h:205
 msgid "Three Steps"
@@ -1463,7 +1467,7 @@ msgstr ""
 
 #: src/translations.h:206
 msgid "Imperial Guards"
-msgstr ""
+msgstr "皇家卫士"
 
 #: src/translations.h:207
 msgid "Horn"
@@ -1479,11 +1483,11 @@ msgstr ""
 
 #: src/translations.h:210
 msgid "Kitchen"
-msgstr ""
+msgstr "厨房"
 
 #: src/translations.h:211
 msgid "River Turtle"
-msgstr ""
+msgstr "河龟"
 
 #: src/translations.h:212
 msgid "Stomach"
@@ -1495,11 +1499,11 @@ msgstr "天大将军"
 
 #: src/translations.h:214
 msgid "Wall"
-msgstr ""
+msgstr "壁"
 
 #: src/translations.h:215
 msgid "Legs"
-msgstr ""
+msgstr "腿"
 
 #: src/translations.h:216
 msgid "Root"
@@ -1515,11 +1519,11 @@ msgstr "阁道"
 
 #: src/translations.h:219
 msgid "Outer Fence"
-msgstr ""
+msgstr "外层围墙"
 
 #: src/translations.h:220
 msgid "Ford"
-msgstr ""
+msgstr "浅滩"
 
 #: src/translations.h:221
 msgid "Seven Excellencies"
@@ -1527,7 +1531,7 @@ msgstr ""
 
 #: src/translations.h:222
 msgid "Market"
-msgstr ""
+msgstr "市场"
 
 #: src/translations.h:223
 msgid "Five Chariots"
@@ -1539,7 +1543,7 @@ msgstr "卷舌"
 
 #: src/translations.h:226
 msgid "Toilet"
-msgstr ""
+msgstr "厕"
 
 #: src/translations.h:227
 msgid "Screen"
@@ -1555,7 +1559,7 @@ msgstr ""
 
 #: src/translations.h:230
 msgid "Three Stars"
-msgstr ""
+msgstr "参"
 
 #: src/translations.h:231
 msgid "Four Channels"
@@ -1603,7 +1607,7 @@ msgstr ""
 
 #: src/translations.h:242
 msgid "Hook"
-msgstr ""
+msgstr "天钩"
 
 #: src/translations.h:243
 msgid "Supreme Palace"
@@ -1611,7 +1615,7 @@ msgstr "太微"
 
 #: src/translations.h:244
 msgid "Jade Well"
-msgstr ""
+msgstr "井"
 
 #: src/translations.h:245
 msgid "Lance"
@@ -1623,7 +1627,7 @@ msgstr "大陵"
 
 #: src/translations.h:248
 msgid "Dog"
-msgstr ""
+msgstr "犬"
 
 #: src/translations.h:249
 msgid "Earth God's Temple"
@@ -1735,15 +1739,15 @@ msgstr ""
 
 #: src/translations.h:276
 msgid "Western Door"
-msgstr ""
+msgstr "西门"
 
 #: src/translations.h:277
 msgid "Eastern Door"
-msgstr ""
+msgstr "东门"
 
 #: src/translations.h:278
 msgid "Farmland"
-msgstr ""
+msgstr "农田"
 
 #: src/translations.h:279
 msgid "Star"
@@ -1852,16 +1856,3 @@ msgstr "分"
 #: src/s_gui.cpp:2737
 msgid "Seconds"
 msgstr "秒"
-
-#~ msgid ""
-#~ "Misc:\n"
-#~ "9   : Toggle meteor shower rates\n"
-#~ msgstr ""
-#~ "杂项: ↵\n"
-#~ "9 : 流星出现率↵\n"
-
-#~ msgid "CTRL + Q : Quit\n"
-#~ msgstr "CTRL + Q : 退出↵\n"
-
-#~ msgid "CMD + Q  : Quit\n"
-#~ msgstr "CMD + Q : 退出↵\n"
